--- a/ppw project/group.html
+++ b/ppw project/group.html
@@ -16,7 +16,7 @@
         <h1>Stayville</h1>
         <nav>
             <ul>
-                <li><a href="#">home</a></li>
+                <li><a href="project.html">home</a></li>
                 <li><a href="group.html">group</a></li>
                 <li><a href="discography.html">discography</a></li>
                 <li><a href="news.html">news</a></li>
@@ -101,7 +101,7 @@
     <section class="member">
         <div class="main">
         <h1>Members</h1>
-        <p>*Note: JYP officially got rid of SKZ Positions on their. They are all all-rounders and not<br> necessarily bound to one position.</p>    
+        <p>*Note: JYP officially got rid of SKZ Positions on their. They are all all-rounders and not necessarily bound to one position.</p>    
         </div>
         <div class="mem">
         <div class="bang">
