--- a/ppw project/news.html
+++ b/ppw project/news.html
@@ -17,7 +17,7 @@
         <h1>Stayville</h1>
         <nav>
             <ul>
-                <li><a href="#">home</a></li>
+                <li><a href="project.html">home</a></li>
                 <li><a href="group.html">group</a></li>
                 <li><a href="discography.html">discography</a></li>
                 <li><a href="news.html">news</a></li>
