--- a/ppw project/project.html
+++ b/ppw project/project.html
@@ -64,7 +64,7 @@
                 <div><a href="discography.html"><button>discography</button></a></div>
             </div>
         </section>
-            <section class="image">
+            <section class="imagez">
             <div class="image1">
             <div class="img1 static">
                 <img src="img/21.jpg" alt="">
@@ -139,7 +139,7 @@
                             <p>Rock-Star (stylized as 樂-STAR) is the eighth Korean-language album (thirteenth overall) by South Korean boy band Stray Kids, released on November 10, 2023</p>
                         </div>
                         <div class="button-wrap">
-                            <a class="atuin-btn" href="#link">read more</a>
+                            <a class="atuin-btn" href="news.html">read more</a>
                         </div>
                     </div>
                 </article>
@@ -153,7 +153,7 @@
                             <p>Stray Kids won first place on Music Core for the first time after six years into their career!</p>
                         </div>
                         <div class="button-wrap">
-                            <a class="atuin-btn" href="#link">read more</a>
+                            <a class="atuin-btn" href="news.html">read more</a>
                         </div>
                     </div>
                 </article>                
@@ -167,7 +167,7 @@
                             <p>Stray Kids(스트레이 키즈) "MEGAVERSE" Video released on November 19, 2023</p>
                         </div>
                         <div class="button-wrap">
-                            <a class="atuin-btn" href="#link">read more</a>
+                            <a class="atuin-btn" href="news.html">read more</a>
                         </div>
                     </div>
                 </article>    
