--- a/ppw project/group.html
+++ b/ppw project/group.html
@@ -30,7 +30,7 @@
     <div class="tt"></div>
     <section class="straykids">
         <div class="stray">
-        <div>
+        <div class="imgskz">
         <img src="img/stray.png" alt="">
         </div>
             <div class="text">
