--- a/ppw project/project.html
+++ b/ppw project/project.html
@@ -59,9 +59,9 @@
         </section>
         <section class="video">
             <div class="popular">
-                <h1>Popular <br> music</h1> 
+                <div><h1>Popular <br> music</h1> </div>
              <hr>
-                <div><a href="discography.html"><button>discography</button></a></div>
+                <div class="butt"><a href="discography.html"><button>discography</button></a></div>
             </div>
         </section>
             <section class="imagez">
