--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -49,7 +49,78 @@
       </div>
     </div>
   </nav>
-
+<section id="hero" class="d-flex align-items-center justify-content-center">
+  <div class="container text-center">
+    <div class="row justify-content-center">
+      <div class="col-md-6 col-lg-8">
+        <h1>Stayville</h1>
+        <h2>As long as I stay with my heart</h2>
+      </div>
+      <div class="row mt-5 justify-content-center">
+        <div class="col-xl-2 col-md-4 col-6">
+          <div class="icon-box">
+            <svg xmlns="http://www.w3.org/2000/svg" width="3em" height="3em" fill="#fff" class="bi bi-music-note-beamed" viewBox="0 0 16 16">
+              <path d="M6 13c0 1.105-1.12 2-2.5 2S1 14.105 1 13c0-1.104 1.12-2 2.5-2s2.5.896 2.5 2m9-2c0 1.105-1.12 2-2.5 2s-2.5-.895-2.5-2 1.12-2 2.5-2 2.5.895 2.5 2"/>
+              <path fill-rule="evenodd" d="M14 11V2h1v9zM6 3v10H5V3z"/>
+              <path d="M5 2.905a1 1 0 0 1 .9-.995l8-.8a1 1 0 0 1 1.1.995V3L5 4z"/>
+            </svg>
+            <h3><a href="#">Stray Kids </a></h3>
+          </div>
+        </div>
+        <div class="col-xl-2 col-md-4 col-6">
+          <div class="icon-box">
+            <svg xmlns="http://www.w3.org/2000/svg" width="3em" height="3em" fill="#fff" class="bi bi-music-note" viewBox="0 0 16 16">
+              <path d="M9 13c0 1.105-1.12 2-2.5 2S4 14.105 4 13s1.12-2 2.5-2 2.5.895 2.5 2"/>
+              <path fill-rule="evenodd" d="M9 3v10H8V3z"/>
+              <path d="M8 2.82a1 1 0 0 1 .804-.98l3-.6A1 1 0 0 1 13 2.22V4L8 5z"/>
+            </svg>
+            <h3><a href="#">Everywhere</a></h3>
+          </div>
+        </div>
+        <div class="col-xl-2 col-md-4 col-6">
+          <div class="icon-box">
+            <svg xmlns="http://www.w3.org/2000/svg" width="3em" height="3em" fill="#fff" class="bi bi-music-note-beamed" viewBox="0 0 16 16">
+              <path d="M6 13c0 1.105-1.12 2-2.5 2S1 14.105 1 13c0-1.104 1.12-2 2.5-2s2.5.896 2.5 2m9-2c0 1.105-1.12 2-2.5 2s-2.5-.895-2.5-2 1.12-2 2.5-2 2.5.895 2.5 2"/>
+              <path fill-rule="evenodd" d="M14 11V2h1v9zM6 3v10H5V3z"/>
+              <path d="M5 2.905a1 1 0 0 1 .9-.995l8-.8a1 1 0 0 1 1.1.995V3L5 4z"/>
+            </svg>
+            <h3><a href="#">All</a></h3>
+          </div>
+        </div>
+        <div class="col-xl-2 col-md-4 col-6">
+          <div class="icon-box">
+            <svg xmlns="http://www.w3.org/2000/svg" width="3em" height="3em" fill="#fff" class="bi bi-music-note" viewBox="0 0 16 16">
+              <path d="M9 13c0 1.105-1.12 2-2.5 2S4 14.105 4 13s1.12-2 2.5-2 2.5.895 2.5 2"/>
+              <path fill-rule="evenodd" d="M9 3v10H8V3z"/>
+              <path d="M8 2.82a1 1 0 0 1 .804-.98l3-.6A1 1 0 0 1 13 2.22V4L8 5z"/>
+            </svg>
+            <h3><a href="#">Around</a></h3>
+          </div>
+        </div>
+        <div class="col-xl-2 col-md-4 col-6">
+          <div class="icon-box">
+            <svg xmlns="http://www.w3.org/2000/svg" width="3em" height="3em" fill="#fff" class="bi bi-music-note-beamed" viewBox="0 0 16 16">
+              <path d="M6 13c0 1.105-1.12 2-2.5 2S1 14.105 1 13c0-1.104 1.12-2 2.5-2s2.5.896 2.5 2m9-2c0 1.105-1.12 2-2.5 2s-2.5-.895-2.5-2 1.12-2 2.5-2 2.5.895 2.5 2"/>
+              <path fill-rule="evenodd" d="M14 11V2h1v9zM6 3v10H5V3z"/>
+              <path d="M5 2.905a1 1 0 0 1 .9-.995l8-.8a1 1 0 0 1 1.1.995V3L5 4z"/>
+            </svg>
+            <h3><a href="#">The</a></h3>
+          </div>
+        </div>
+        <div class="col-xl-2 col-md-4 col-6">
+          <div class="icon-box">
+            <svg xmlns="http://www.w3.org/2000/svg" width="3em" height="3em" fill="#fff" class="bi bi-music-note" viewBox="0 0 16 16">
+              <path d="M9 13c0 1.105-1.12 2-2.5 2S4 14.105 4 13s1.12-2 2.5-2 2.5.895 2.5 2"/>
+              <path fill-rule="evenodd" d="M9 3v10H8V3z"/>
+              <path d="M8 2.82a1 1 0 0 1 .804-.98l3-.6A1 1 0 0 1 13 2.22V4L8 5z"/>
+            </svg>
+            <h3><a href="#">World</a></h3>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
