--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -121,6 +121,343 @@
     </div>
   </div>
 </section>
+<section class="about my-5" id="about">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6 order-1 order-lg-2">
+        <img class="img-fluid" src="img/group.jfif" alt="">
+      </div>
+      <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 content">
+        <h3 class="text-center">STRAY KIDS EVERYWHERE ALL AROUND THE WORLD</h3>
+        <p class="font-italic">
+          Welcome to the Stayville website. This is a virtual journey into the world of music, which begins with Stray Kids.
+        </p>
+        <ul>
+          <li>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#b9413e" class="bi bi-activity" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M6 2a.5.5 0 0 1 .47.33L10 12.036l1.53-4.208A.5.5 0 0 1 12 7.5h3.5a.5.5 0 0 1 0 1h-3.15l-1.88 5.17a.5.5 0 0 1-.94 0L6 3.964 4.47 8.171A.5.5 0 0 1 4 8.5H.5a.5.5 0 0 1 0-1h3.15l1.88-5.17A.5.5 0 0 1 6 2"/>
+            </svg> <strong> Stray Kids (스트레이 키즈)</strong> is an eight-member boy group under JYP Entertainment. They were formed through the competition reality show of the same name. Originally as nine, they debuted on March 25, 2018 with the mini album I Am Not.
+          </li>
+          <li>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#b9413e" class="bi bi-activity" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M6 2a.5.5 0 0 1 .47.33L10 12.036l1.53-4.208A.5.5 0 0 1 12 7.5h3.5a.5.5 0 0 1 0 1h-3.15l-1.88 5.17a.5.5 0 0 1-.94 0L6 3.964 4.47 8.171A.5.5 0 0 1 4 8.5H.5a.5.5 0 0 1 0-1h3.15l1.88-5.17A.5.5 0 0 1 6 2"/>
+            </svg> Stray Kids' logo is written in Bang Chan's handwriting.
+          </li>
+          <li>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#b9413e" class="bi bi-activity" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M6 2a.5.5 0 0 1 .47.33L10 12.036l1.53-4.208A.5.5 0 0 1 12 7.5h3.5a.5.5 0 0 1 0 1h-3.15l-1.88 5.17a.5.5 0 0 1-.94 0L6 3.964 4.47 8.171A.5.5 0 0 1 4 8.5H.5a.5.5 0 0 1 0-1h3.15l1.88-5.17A.5.5 0 0 1 6 2"/>
+            </svg> Stray Kids are highly involved in the creation of their songs. The lyrics and melodies are theirs and, according to Bang Chan, they are given a lot of freedom.
+          </li>
+          <li>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#b9413e" class="bi bi-activity" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M6 2a.5.5 0 0 1 .47.33L10 12.036l1.53-4.208A.5.5 0 0 1 12 7.5h3.5a.5.5 0 0 1 0 1h-3.15l-1.88 5.17a.5.5 0 0 1-.94 0L6 3.964 4.47 8.171A.5.5 0 0 1 4 8.5H.5a.5.5 0 0 1 0-1h3.15l1.88-5.17A.5.5 0 0 1 6 2"/>
+            </svg> The struggles and thoughts explored in their songs often mirror those of their fans.
+          </li>
+        </ul>
+        <p>
+          Stray Kids is not just music, it's movement, philosophy and art. They gave us several hundred songs, but also caused endless emotions and hopes. They are a bridge between music and life. Join our journey and I assure you it will leave a mark in your hearts and give you faith in your abilities.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="cta mb-5">
+  <div class="container text-center">
+    <h3>You make Stray kids Stay</h3>
+    <p>
+      STAY is the official fandom name for the South Korean boy group Stray Kids."STAY" has two meanings: a place where people who are wandering (Stray) can stay (STAY), and the reason for the existence of Stray Kids, as the letter 'r' in 'Stray' in the group name is interpreted as reason. The fans are the reason why and where Stray Kids can stay.
+    </p>
+    <a href="#" class="cta-btn">music</a>
+  </div>
+</section>
+<div class="mem row row-cols-2 row-cols-md-4 g-4 m-5 ">
+  <div class="col">
+    <div class="card h-100 ">
+      <img src="img/1.jpg" class="card-img-top" alt="">
+      <div class="card-body">
+        <h5 class="card-title">Bang Chan & Hyunjin</h5>
+        <p class="card-text">Showcase exceptional talent and charisma, captivating fans worldwide with their dynamic performances and unique contributions to the group.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card h-100 ">
+      <img src="img/2.jpg" class="card-img-top" alt="">
+      <div class="card-body">
+        <h5 class="card-title">I.N & Lee Know</h5>
+        <p class="card-text">Bring a perfect blend of youthful energy and seasoned expertise to the group, contributing to the group's overall versatility and charm.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card h-100 ">
+      <img src="img/3.jpg" class="card-img-top" alt="">
+      <div class="card-body">
+        <h5 class="card-title">Changbin & Seungmin</h5>
+        <p class="card-text">Complement each other with Changbin's powerful rap skills and Seungmin's melodious vocals, creating a harmonious synergy that enriches the group's musical spectrum.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card h-100 ">
+      <img src="img/4.jpg" class="card-img-top" alt="">
+      <div class="card-body">
+        <h5 class="card-title">Han & Felix</h5>
+        <p class="card-text">Synergize their talents to create an electrifying combination of rap and deep vocals, contributing to the group's diverse sound and leaving a lasting impact on fans worldwide.</p>
+      </div>
+    </div>
+  </div>
+</div>
+<h3 class="new m-5 text-center"> What's new?</h3>
+<section class="contentt d-flex justify-content-center">
+<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="img/bbmas.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/show1.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/bbmas1.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/show2.jpg" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+</section>
+<section id="group">
+  <div class="accordion accordion-flush m-5" id="accordionFlushExample">
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+          Bang Chan
+        </button>
+      </h2>
+      <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body d-flex justify-content-start flex-wrap align-items-center">
+          <div class="image">
+            <img class="w-30" src="img/bangchan.png" alt="">
+          </div>
+          <div class="text">
+            <h3>Bahng Cristofer Chahn</h3>
+            <p>Trained for 7 years; friends with a lot of idols; he also likes to DJ; “if Stay are happy then Channie is happy too”</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+          Changbin
+        </button>
+      </h2>
+      <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body d-flex justify-content-start flex-wrap align-items-center">
+          <div class="image">
+            <img class="w-30" src="img/changbin.png" alt="">
+          </div>
+          <div class="text">
+            <h3>Seo Changbin</h3>
+            <p>Was part of a dance team in high school, now one of the main rappers; always working out; actually the one with the most aegyo</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+          Lee Know
+        </button>
+      </h2>
+      <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body d-flex justify-content-start flex-wrap align-items-center">
+          <div class="image">
+            <img class="w-30" src="img/leeknow.png" alt="">
+          </div>
+          <div class="text">
+            <h3>Lee Minho</h3>
+            <p>Has 3 cats, and absolutely adores cats; ambidextrous; shortest trainee period; likes boxing</p>
+          </div>        
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+          Han
+        </button>
+      </h2>
+      <div id="flush-collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body d-flex justify-content-start flex-wrap align-items-center">
+          <div class="image">
+            <img class="w-30" src="img/han.png" alt="">
+          </div>
+          <div class="text">
+            <h3>Han Jisung</h3>
+            <p>Likes ghibli movies, watches nature documentaries on youtube, lived in Malaysia for several years, loves cheesecake</p>
+          </div>        
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
+          Felix
+        </button>
+      </h2>
+      <div id="flush-collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body d-flex justify-content-start flex-wrap align-items-center">
+          <div class="image">
+            <img class="w-30" src="img/felix.png" alt="">
+          </div>
+          <div class="text">
+            <h3>Lee Yongbok/Felix Lee</h3>
+            <p>Loves baking; very cuddly; likes video games; freckles</p>
+          </div>        
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSix" aria-expanded="false" aria-controls="flush-collapseSix">
+          Seungmin
+        </button>
+      </h2>
+      <div id="flush-collapseSix" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body d-flex justify-content-start flex-wrap align-items-center">
+          <div class="image">
+            <img class="w-30" src="img/seungmin.png" alt="">
+          </div>
+          <div class="text">
+            <h3>Kim Seungmin</h3>
+            <p>His english name is Sky; most diligent; biggest Day6 fan; loves mint chocolate and Korean food; wanted to become a baseball player when he was younger</p>
+          </div>        
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSeven" aria-expanded="false" aria-controls="flush-collapseSeven">
+          Hyunjin
+        </button>
+      </h2>
+      <div id="flush-collapseSeven" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body d-flex justify-content-start flex-wrap align-items-center">
+          <div class="image">
+            <img class="w-30" src="img/hyunjin.png" alt="">
+          </div>
+          <div class="text">
+            <h3>Hwang Hyunjin</h3>
+            <p>He’s been an MC for Music Core for two years now, hates eggplants, is learning producing currently, loves among us</p>
+          </div>        
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseEight" aria-expanded="false" aria-controls="flush-collapseEight">
+          I.N
+        </button>
+      </h2>
+      <div id="flush-collapseEight" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body d-flex justify-content-start flex-wrap align-items-center">
+          <div class="image">
+            <img class="w-30" src="img/in.png" alt="">
+          </div>
+          <div class="text">
+            <h3>Yang Jeongin</h3>
+            <p>Loves trot; works out a lot actually; truly the definition of Maknae on Top, always smiling</p>
+          </div>        
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="services">
+  <div class="container">
+    <div class="section-title">
+      <h2 class="text-center">Music</h2>
+    </div>
+    <div class="row">
+      <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+        <div class="imagen-box d-flex justify-content-center flex-column">
+          <div class="imagen">
+            <img src="img/21.jpg" alt="">
+          </div>
+          <div class="text text-center">
+          <h4>Lorem, ipsum dolor. </h4>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id excepturi delectus iusto quidem odio. Nostrum?</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+        <div class="imagen-box d-flex justify-content-center flex-column">
+          <div class="imagen">
+            <img src="img/21.jpg" alt="">
+          </div>
+          <div class="text text-center">
+          <h4>Lorem, ipsum dolor. </h4>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id excepturi delectus iusto quidem odio. Nostrum?</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+        <div class="imagen-box d-flex justify-content-center flex-column">
+          <div class="imagen">
+            <img src="img/21.jpg" alt="">
+          </div>
+          <div class="text text-center">
+          <h4>Lorem, ipsum dolor. </h4>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id excepturi delectus iusto quidem odio. Nostrum?</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+        <div class="imagen-box d-flex justify-content-center flex-column">
+          <div class="imagen">
+            <img src="img/21.jpg" alt="">
+          </div>
+          <div class="text text-center">
+          <h4>Lorem, ipsum dolor. </h4>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id excepturi delectus iusto quidem odio. Nostrum?</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+        <div class="imagen-box d-flex justify-content-center flex-column">
+          <div class="imagen">
+            <img src="img/21.jpg" alt="">
+          </div>
+          <div class="text text-center">
+          <h4>Lorem, ipsum dolor. </h4>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id excepturi delectus iusto quidem odio. Nostrum?</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+        <div class="imagen-box d-flex justify-content-center flex-column">
+          <div class="imagen">
+            <img src="img/21.jpg" alt="">
+          </div>
+          <div class="text text-center">
+          <h4>Lorem, ipsum dolor. </h4>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id excepturi delectus iusto quidem odio. Nostrum?</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
