--- a/ppw project/group.html
+++ b/ppw project/group.html
@@ -183,7 +183,7 @@
             <div class="text">
                 <h1>Han</h1>
                 <p>Name</p>
-                <h3>Han Lisung</h3>
+                <h3>Han Jisung</h3>
                 <p>Birthday</p>
                 <h3>14/09/2000 (Virgo)</h3>
                 <p>Nationality</p>
