--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -64,7 +64,7 @@
               <path fill-rule="evenodd" d="M14 11V2h1v9zM6 3v10H5V3z"/>
               <path d="M5 2.905a1 1 0 0 1 .9-.995l8-.8a1 1 0 0 1 1.1.995V3L5 4z"/>
             </svg>
-            <h3><a href="https://open.spotify.com/artist/2dIgFjalVxs4ThymZ67YCE">Stray Kids </a></h3>
+            <h3><a href="https://open.spotify.com/artist/2dIgFjalVxs4ThymZ67YCE" target="_blank">Stray Kids </a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4 col-6">
@@ -74,7 +74,7 @@
               <path fill-rule="evenodd" d="M9 3v10H8V3z"/>
               <path d="M8 2.82a1 1 0 0 1 .804-.98l3-.6A1 1 0 0 1 13 2.22V4L8 5z"/>
             </svg>
-            <h3><a href="https://open.spotify.com/artist/2dIgFjalVxs4ThymZ67YCE">Everywhere</a></h3>
+            <h3><a href="https://open.spotify.com/artist/2dIgFjalVxs4ThymZ67YCE" target="_blank">Everywhere</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4 col-6">
@@ -84,7 +84,7 @@
               <path fill-rule="evenodd" d="M14 11V2h1v9zM6 3v10H5V3z"/>
               <path d="M5 2.905a1 1 0 0 1 .9-.995l8-.8a1 1 0 0 1 1.1.995V3L5 4z"/>
             </svg>
-            <h3><a href="https://open.spotify.com/artist/2dIgFjalVxs4ThymZ67YCE">All</a></h3>
+            <h3><a href="https://open.spotify.com/artist/2dIgFjalVxs4ThymZ67YCE" target="_blank">All</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4 col-6">
@@ -94,7 +94,7 @@
               <path fill-rule="evenodd" d="M9 3v10H8V3z"/>
               <path d="M8 2.82a1 1 0 0 1 .804-.98l3-.6A1 1 0 0 1 13 2.22V4L8 5z"/>
             </svg>
-            <h3><a href="https://open.spotify.com/artist/2dIgFjalVxs4ThymZ67YCE">Around</a></h3>
+            <h3><a href="https://open.spotify.com/artist/2dIgFjalVxs4ThymZ67YCE" target="_blank">Around</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4 col-6">
@@ -104,7 +104,7 @@
               <path fill-rule="evenodd" d="M14 11V2h1v9zM6 3v10H5V3z"/>
               <path d="M5 2.905a1 1 0 0 1 .9-.995l8-.8a1 1 0 0 1 1.1.995V3L5 4z"/>
             </svg>
-            <h3><a href="https://open.spotify.com/artist/2dIgFjalVxs4ThymZ67YCE">The</a></h3>
+            <h3><a href="https://open.spotify.com/artist/2dIgFjalVxs4ThymZ67YCE" target="_blank">The</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4 col-6">
@@ -114,7 +114,7 @@
               <path fill-rule="evenodd" d="M9 3v10H8V3z"/>
               <path d="M8 2.82a1 1 0 0 1 .804-.98l3-.6A1 1 0 0 1 13 2.22V4L8 5z"/>
             </svg>
-            <h3><a href="https://open.spotify.com/artist/2dIgFjalVxs4ThymZ67YCE">World</a></h3>
+            <h3><a href="https://open.spotify.com/artist/2dIgFjalVxs4ThymZ67YCE" target="_blank">World</a></h3>
           </div>
         </div>
       </div>
