--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -25,7 +25,7 @@
             <a class="nav-link active" aria-current="page" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#group">Group</a>
+            <a class="nav-link" href="stray.html">Group</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -235,155 +235,7 @@
   </button>
 </div>
 </section>
-<section id="group">
-  <h1>Stray kids</h1>
-  <div class="accordion accordion-flush m-5 mt-0" id="accordionFlushExample">
-    <div class="accordion-item">
-      <h2 class="accordion-header">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-          Bang Chan
-        </button>
-      </h2>
-      <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-        <div class="accordion-body d-flex justify-content-start flex-wrap align-items-center">
-          <div class="image">
-            <img class="w-30" src="img/bangchan.png" alt="">
-          </div>
-          <div class="text">
-            <h3>Bahng Cristofer Chahn</h3>
-            <p>Trained for 7 years; friends with a lot of idols; he also likes to DJ; “if Stay are happy then Channie is happy too”</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="accordion-item">
-      <h2 class="accordion-header">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-          Changbin
-        </button>
-      </h2>
-      <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-        <div class="accordion-body d-flex justify-content-start flex-wrap align-items-center">
-          <div class="image">
-            <img class="w-30" src="img/changbin.png" alt="">
-          </div>
-          <div class="text">
-            <h3>Seo Changbin</h3>
-            <p>Was part of a dance team in high school, now one of the main rappers; always working out; actually the one with the most aegyo</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="accordion-item">
-      <h2 class="accordion-header">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-          Lee Know
-        </button>
-      </h2>
-      <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-        <div class="accordion-body d-flex justify-content-start flex-wrap align-items-center">
-          <div class="image">
-            <img class="w-30" src="img/leeknow.png" alt="">
-          </div>
-          <div class="text">
-            <h3>Lee Minho</h3>
-            <p>Has 3 cats, and absolutely adores cats; ambidextrous; shortest trainee period; likes boxing</p>
-          </div>        
-        </div>
-      </div>
-    </div>
-    <div class="accordion-item">
-      <h2 class="accordion-header">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
-          Han
-        </button>
-      </h2>
-      <div id="flush-collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-        <div class="accordion-body d-flex justify-content-start flex-wrap align-items-center">
-          <div class="image">
-            <img class="w-30" src="img/han.png" alt="">
-          </div>
-          <div class="text">
-            <h3>Han Jisung</h3>
-            <p>Likes ghibli movies, watches nature documentaries on youtube, lived in Malaysia for several years, loves cheesecake</p>
-          </div>        
-        </div>
-      </div>
-    </div>
-    <div class="accordion-item">
-      <h2 class="accordion-header">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
-          Felix
-        </button>
-      </h2>
-      <div id="flush-collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-        <div class="accordion-body d-flex justify-content-start flex-wrap align-items-center">
-          <div class="image">
-            <img class="w-30" src="img/felix.png" alt="">
-          </div>
-          <div class="text">
-            <h3>Lee Yongbok/Felix Lee</h3>
-            <p>Loves baking; very cuddly; likes video games; freckles</p>
-          </div>        
-        </div>
-      </div>
-    </div>
-    <div class="accordion-item">
-      <h2 class="accordion-header">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSix" aria-expanded="false" aria-controls="flush-collapseSix">
-          Seungmin
-        </button>
-      </h2>
-      <div id="flush-collapseSix" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-        <div class="accordion-body d-flex justify-content-start flex-wrap align-items-center">
-          <div class="image">
-            <img class="w-30" src="img/seungmin.png" alt="">
-          </div>
-          <div class="text">
-            <h3>Kim Seungmin</h3>
-            <p>His english name is Sky; most diligent; biggest Day6 fan; loves mint chocolate and Korean food; wanted to become a baseball player when he was younger</p>
-          </div>        
-        </div>
-      </div>
-    </div>
-    <div class="accordion-item">
-      <h2 class="accordion-header">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSeven" aria-expanded="false" aria-controls="flush-collapseSeven">
-          Hyunjin
-        </button>
-      </h2>
-      <div id="flush-collapseSeven" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-        <div class="accordion-body d-flex justify-content-start flex-wrap align-items-center">
-          <div class="image">
-            <img class="w-30" src="img/hyunjin.png" alt="">
-          </div>
-          <div class="text">
-            <h3>Hwang Hyunjin</h3>
-            <p>He’s been an MC for Music Core for two years now, hates eggplants, is learning producing currently, loves among us</p>
-          </div>        
-        </div>
-      </div>
-    </div>
-    <div class="accordion-item">
-      <h2 class="accordion-header">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseEight" aria-expanded="false" aria-controls="flush-collapseEight">
-          I.N
-        </button>
-      </h2>
-      <div id="flush-collapseEight" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-        <div class="accordion-body d-flex justify-content-start flex-wrap align-items-center">
-          <div class="image">
-            <img class="w-30" src="img/in.png" alt="">
-          </div>
-          <div class="text">
-            <h3>Yang Jeongin</h3>
-            <p>Loves trot; works out a lot actually; truly the definition of Maknae on Top, always smiling</p>
-          </div>        
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+
 <section class="services" id="music">
   <div class="container">
     <div class="section-title">
